# intents

./: .gitignore  .lia.cache  AGENTS.md  Cargo.toml  Makefile  rust-toolchain
contracts/defuse/: Cargo.toml
contracts/defuse/core/: Cargo.toml
contracts/defuse/core/src/: accounts.rs  amounts.rs  fees.rs  public_key.rs  signature.rs  tokens.rs
contracts/defuse/core/src/engine/: mod.rs
contracts/defuse/core/src/engine/state/: deltas.rs
contracts/defuse/core/src/events/tests/: v0_4_1.rs
contracts/defuse/core/src/intents/: account.rs  auth.rs  imt.rs  mod.rs  token_diff.rs  tokens.rs
contracts/defuse/core/src/nonce/: mod.rs  salted.rs
contracts/defuse/core/src/payload/: erc191.rs  mod.rs  multi.rs  nep413.rs  raw.rs  sep53.rs  tip191.rs  ton_connect.rs  webauthn.rs
contracts/defuse/src/: simulation_output.rs
contracts/defuse/src/contract/: abi.rs  config.rs  mod.rs
contracts/defuse/src/contract/accounts/: mod.rs  state.rs
contracts/defuse/src/contract/accounts/account/: mod.rs  nonces.rs
contracts/defuse/src/contract/accounts/account/entry/: mod.rs  v0.rs  v1.rs
contracts/defuse/src/contract/state/: mod.rs  v0.rs
contracts/defuse/src/contract/tokens/: mod.rs
contracts/defuse/src/contract/tokens/nep245/: enumeration.rs
contracts/defuse/src/contract/versioned/: mod.rs  v0.rs
contracts/defuse/src/tokens/: mod.rs
contracts/escrow-swap/: Cargo.toml
contracts/escrow-swap/src/: action.rs  auth_call.rs  event.rs  state.rs
contracts/escrow-swap/src/contract/: mod.rs
contracts/escrow-swap/src/contract/tokens/: mod.rs
contracts/global-deployer/: Cargo.toml  README.md
contracts/global-deployer/src/: contract.rs  lib.rs
contracts/outlayer-app/: Cargo.toml
contracts/outlayer-app/core/: Cargo.toml
contracts/outlayer-app/src/: contract.rs
contracts/poa/factory/: Cargo.toml
contracts/poa/factory/src/: contract.rs
contracts/poa/token/: Cargo.toml
contracts/treasury-logger/: Cargo.toml
contracts/treasury-logger/src/: lib.rs  state.rs
contracts/wallet/: Cargo.toml  README.md
contracts/wallet/signatures/ed25519/: Cargo.toml
contracts/wallet/signatures/ed25519/src/: lib.rs
contracts/wallet/signatures/no-sign/: Cargo.toml
contracts/wallet/signatures/no-sign/src/: contract.rs  lib.rs
contracts/wallet/signatures/webauthn/: Cargo.toml
contracts/wallet/signatures/webauthn/ed25519/: Cargo.toml
contracts/wallet/signatures/webauthn/ed25519/src/: lib.rs
contracts/wallet/signatures/webauthn/p256/: Cargo.toml
contracts/wallet/signatures/webauthn/p256/src/: lib.rs
contracts/wallet/signatures/webauthn/src/: ed25519.rs  lib.rs  p256.rs
contracts/wallet/src/: contract.rs  error.rs  events.rs  lib.rs  message.rs  nonces.rs  schema.rs  state.rs
contracts/wallet/src/request/: mod.rs  ops.rs
crates/bitmap/: Cargo.toml
crates/bitmap/src/: lib.rs
crates/cli-utils/src/: hash.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: curve.rs  ed25519.rs  fmt.rs  lib.rs  p256.rs  secp256k1.rs
crates/io-utils/: Cargo.toml
crates/kdf/: Cargo.toml
crates/kdf/mpc/: Cargo.toml
crates/kdf/mpc/src/: ckd.rs
crates/kdf/mpc/src/tweak/: ed25519.rs  secp256k1.rs
crates/kdf/src/: ed25519.rs  lib.rs  secp256k1.rs  signer.rs
crates/kdf/src/schema/: additive.rs  mod.rs
crates/map-utils/: Cargo.toml
crates/near/admin-utils/: Cargo.toml
crates/near/auth-call/: Cargo.toml
crates/near/controller/: Cargo.toml
crates/near/nep245/: Cargo.toml
crates/near/nep245/src/: events.rs  token.rs
crates/near/promise/src/: lib.rs
crates/near/promise/src/actions/: function_call.rs  mod.rs  state_init.rs  transfer.rs
crates/near/utils/: Cargo.toml
crates/near/utils/src/: lock.rs  panic_on_clone.rs
crates/near/wnear/: Cargo.toml
crates/num-utils/: Cargo.toml
crates/primitives/decimal/: Cargo.toml
crates/primitives/fees/: Cargo.toml
crates/primitives/time/: Cargo.toml
crates/primitives/time/src/: lib.rs  serde.rs
crates/primitives/token-id/: Cargo.toml
crates/primitives/token-id/src/: imt.rs  lib.rs  nep245.rs
crates/signatures/erc191/: Cargo.toml
crates/signatures/erc191/src/: lib.rs
crates/signatures/nep413/: Cargo.toml
crates/signatures/nep413/src/: lib.rs
crates/signatures/sep53/: Cargo.toml
crates/signatures/sep53/src/: lib.rs
crates/signatures/tip191/: Cargo.toml
crates/signatures/tip191/src/: lib.rs
crates/signatures/ton-connect/: Cargo.toml
crates/signatures/ton-connect/src/: cell.rs  lib.rs
crates/signatures/webauthn/: Cargo.toml
crates/signatures/webauthn/src/: ed25519.rs  lib.rs  p256.rs
crates/testing/randomness/: Cargo.toml
crates/testing/sandbox/: Cargo.toml
crates/testing/sandbox/src/: account.rs
crates/testing/sandbox/src/extensions/: wallet.rs
crates/testing/sandbox/src/extensions/defuse/: event.rs  signer.rs
crates/testing/utils/: Cargo.toml
crates/testing/utils/src/: fixtures.rs  wasms.rs
crates/wallet/core/: Cargo.toml
crates/wallet/relayer/: Cargo.toml
crates/wallet/relayer/examples/: bench.rs  relay.rs
crates/wallet/relayer/src/: lib.rs  request.rs
crates/wallet/sdk/: Cargo.toml
crates/wallet/sdk/src/: client.rs  ed25519.rs  lib.rs  nonces.rs  signer.rs
research/: falsify.md  falsify.py  falsify2.py  model.md  report.md
research/proofs/: .Model.aux  Model.v
tests/: Cargo.toml
tests/contracts/multi-token-receiver-stub/: Cargo.toml
tests/contracts/multi-token-receiver-stub/src/: lib.rs
tests/src/tests/defuse/env/: mod.rs
tests/src/tests/defuse/intents/: mod.rs  public_key.rs
tests/src/tests/defuse/state/: upgrade.rs
tests/src/tests/wallet/: mod.rs
verification/: assumptions.md  proof-index.md  threat-model.md
verification/plans/: critical-high-map.md
