lints.workspace = true

[package]
name = "defuse-escrow-swap"
edition.workspace = true
version = "0.1.0"
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
defuse-borsh-utils.workspace = true
defuse-decimal = { workspace = true, features = ["borsh", "serde"] }
defuse-fees = { workspace = true, features = ["borsh", "serde"] }
defuse-nep245.workspace = true
defuse-num-utils.workspace = true
defuse-time = { workspace = true, features = ["borsh", "serde"] }
defuse-token-id = { workspace = true, features = ["borsh", "serde"] }

near-contract-standards.workspace = true
near-sdk.workspace = true

borsh = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["from"] }
hex.workspace = true
impl-tools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }
thiserror.workspace = true

defuse-auth-call = { workspace = true, optional = true }
defuse-near-utils = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["auth_call", "nep141", "nep245"]

auth_call = ["dep:defuse-auth-call"]
nep141 = []
nep245 = []

abi = [
  "borsh/unstable__schema",
  "defuse-decimal/abi",
  "defuse-fees/abi",
  "defuse-nep245/abi",
  "defuse-time/abi",
  "defuse-token-id/abi",
  "dep:schemars",
  "near-sdk/abi",
  "serde_with/schemars_0_8",
]
contract = ["dep:defuse-near-utils"]

[dev-dependencies]
defuse-escrow-swap = { path = ".", features = ["abi"] }
defuse-sandbox.workspace = true

futures.workspace = true
itertools.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["macros"] }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
  "--features=contract",
  "--abi-features=abi,contract",
]
