lints.workspace = true

[package]
name = "defuse-global-deployer"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
defuse-borsh-utils.workspace = true
defuse-global-deployer-core = { workspace = true, features = ["borsh"] }
defuse-serde-utils = { workspace = true, features = ["hex"] }
near-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, features = ["hex"] }

defuse-digest = { workspace = true, features = ["sha2"], optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }

[features]
abi = [
  "defuse-borsh-utils/schema",
  "defuse-global-deployer-core/abi",
  "defuse-serde-utils/abi",
  "dep:schemars",
  "near-sdk/abi",
  "serde_with/schemars_0_8",
]
contract = ["dep:defuse-digest", "near-sdk/deterministic-account-ids"]

[dev-dependencies]
defuse-global-deployer = { path = ".", features = ["abi"] }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
  "--features=contract",
  "--abi-features=abi,contract",
]
