lints.workspace = true

[package]
name = "defuse-treasury-logger"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
defuse-borsh-utils.workspace = true
defuse-near-utils.workspace = true
defuse-nep245.workspace = true

borsh = { workspace = true, features = ["derive"] }
impl-tools.workspace = true
near-sdk.workspace = true
serde_with.workspace = true

[features]
abi = [
  "borsh/unstable__schema",
  "defuse-borsh-utils/schema",
  "defuse-near-utils/abi",
  "defuse-nep245/abi",
  "near-sdk/abi",
  "serde_with/schemars_0_8",
]

[dev-dependencies]
defuse-treasury-logger = { path = ".", features = ["abi"] }

near-sdk = { workspace = true, features = ["unit-testing"] }
rstest.workspace = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
  "--abi-features=abi",
]
