lints.workspace = true

[package]
name = "defuse-crypto"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["as_ref", "from", "into"] }

arbitrary = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, features = ["derive"], optional = true }
bs58 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }
k256 = { workspace = true, features = ["ecdsa"], optional = true }
p256 = { workspace = true, features = ["ecdsa"], optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[target.'cfg(near)'.dependencies]
near-sdk = { workspace = true, optional = true }

[features]
ed25519 = ["dep:ed25519-dalek", "dep:near-sdk"]
p256 = ["dep:near-sdk", "dep:p256"]
secp256k1 = ["dep:k256", "dep:near-sdk", "near-sdk/unstable"]

abi = ["borsh-schema", "schemars-v0_8"]
arbitrary = ["dep:arbitrary"]
borsh = ["dep:borsh"]
borsh-schema = ["borsh", "borsh/unstable__schema"]
fmt = ["dep:bs58", "dep:thiserror"]
serde = ["dep:serde_with", "fmt"]
schemars-v0_8 = [
  "dep:hex-literal",
  "dep:schemars",
  "serde",
  "serde_with?/schemars_0_8",
]

[dev-dependencies]
defuse-crypto = { path = ".", features = ["ed25519", "p256", "secp256k1", "abi"] }

hex-literal.workspace = true
rstest.workspace = true

[target.'cfg(near)'.dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
