lints.workspace = true

[package]
# TODO: rename to verifier
name = "defuse-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-bitmap = { workspace = true, features = ["borsh"] }
defuse-crypto = { workspace = true, features = ["borsh", "ed25519", "secp256k1", "p256", "serde"] }
defuse-digest = { workspace = true, features = ["sha2"] }
defuse-erc191.workspace = true
defuse-fees = { workspace = true, features = ["borsh", "serde"] }
defuse-map-utils = { workspace = true, features = ["near"] }
defuse-near-utils.workspace = true
defuse-nep245.workspace = true
defuse-nep413 = { workspace = true, features = ["serde"] }
defuse-num-utils.workspace = true
defuse-sep53.workspace = true
# defuse-signature-schema.workspace = true
defuse-time = { workspace = true, features = ["borsh", "serde"] }
defuse-tip191.workspace = true
defuse-token-id = { workspace = true, features = ["borsh", "serde"] }
defuse-ton-connect = { workspace = true, features = ["serde"] }
defuse-webauthn = { workspace = true, features = ["ed25519", "p256"] }

borsh = { workspace = true, features = ["derive"] }
defuse-borsh-utils.workspace = true
derive_more = { workspace = true, features = ["from"] }
hex.workspace = true
hex-literal.workspace = true
impl-tools.workspace = true
near-contract-standards.workspace = true
near-sdk = { workspace = true, features = ["deterministic-account-ids"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["base58", "base64"] }
thiserror.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
near-kit = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }

[features]
abi = [
  "borsh/unstable__schema",
  "defuse-bitmap/abi",
  "defuse-crypto/abi",
  "defuse-fees/abi",
  "defuse-nep413/abi",
  "defuse-time/abi",
  "defuse-token-id/abi",
  "defuse-ton-connect/abi",
  "defuse-webauthn/abi",
  "dep:schemars",
  "near-sdk/abi",
  "serde_with/schemars_0_8",
]
arbitrary = [
  "defuse-bitmap/arbitrary",
  "defuse-crypto/arbitrary",
  "defuse-token-id/arbitrary",
  "defuse-ton-connect/arbitrary",
  "dep:arbitrary",
]
imt = []
near-kit = ["defuse-nep413/near-kit", "dep:near-kit"]

[dev-dependencies]
defuse-core = { workspace = true, features = ["arbitrary"] }
defuse-test-utils.workspace = true

hex-literal.workspace = true
itertools.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
rstest.workspace = true
