lints.workspace = true

[package]
name = "defuse-poa-factory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
  "--features=contract",
  "--abi-features=abi,contract",
]

[dependencies]
defuse-admin-utils.workspace = true
defuse-near-utils.workspace = true
defuse-poa-token.workspace = true

near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
defuse-sandbox.workspace = true
futures.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["macros"] }

[features]
abi = ["defuse-near-utils/abi", "dep:schemars"]

contract = []

[build-dependencies]
cargo-near-build = { workspace = true, features = ["build_external"] }
