lints.workspace = true

[package]
name = "defuse-nep245"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
borsh = { workspace = true, features = ["derive"] }
defuse-near-utils.workspace = true
derive_more = { workspace = true, features = ["from"] }
near-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

schemars = { workspace = true, features = ["derive"], optional = true }

[features]
abi = ["borsh/unstable__schema", "dep:schemars", "near-sdk/abi"]

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
