lints.workspace = true

[package]
name = "defuse-near-utils"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-borsh-utils.workspace = true

borsh = { workspace = true, features = ["derive"] }
impl-tools.workspace = true
near-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }

schemars = { workspace = true, features = ["derive"], optional = true }

[features]
abi = ["borsh/unstable__schema", "dep:schemars"]

[dev-dependencies]
defuse-test-utils.workspace = true

near-sdk = { workspace = true, features = ["unit-testing"] }
rstest.workspace = true
