lints.workspace = true

[package]
name = "defuse-token-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
near-account-id.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, features = ["derive"], optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }

[features]
abi = ["borsh?/unstable__schema", "dep:schemars", "near-account-id/abi"]
arbitrary = ["dep:arbitrary", "near-account-id/arbitrary"]
borsh = ["dep:borsh", "near-account-id/borsh"]
serde = ["dep:serde_with"]

[dev-dependencies]
defuse-test-utils.workspace = true
defuse-token-id = { workspace = true, features = ["borsh"] }

arbitrary.workspace = true
borsh.workspace = true
hex.workspace = true
near-account-id = { workspace = true, features = ["arbitrary"] }
rstest.workspace = true
serde_json.workspace = true
