lints.workspace = true

[package]
name = "defuse-erc191"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["secp256k1"] }
defuse-digest = { workspace = true, features = ["sha3"] }

[dev-dependencies]
hex-literal.workspace = true
rstest.workspace = true
