lints.workspace = true

[package]
name = "defuse-nep413"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["ed25519"] }
defuse-digest = { workspace = true, features = ["sha2"] }
defuse-nep461.workspace = true

borsh = { workspace = true, features = ["derive"] }
digest-io.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
cfg_eval = { workspace = true, optional = true }
near-kit = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, features = ["base64"], optional = true }

[features]
abi = ["borsh-schema", "schemars-v0_8"]
arbitrary = ["dep:arbitrary"]
borsh-schema = ["borsh/unstable__schema"]
near-kit = ["dep:near-kit"]
serde = ["dep:cfg_eval", "dep:serde", "dep:serde_with"]
schemars-v0_8 = ["dep:schemars", "serde", "serde_with?/schemars_0_8"]

[dev-dependencies]
defuse-nep413 = { path = ".", features = ["arbitrary", "borsh-schema", "serde", "schemars-v0_8"] }
hex-literal.workspace = true
rstest.workspace = true
