lints.workspace = true

[package]
name = "defuse-sep53"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["ed25519"] }
defuse-digest = { workspace = true, features = ["sha2"] }

[dev-dependencies]
hex-literal.workspace = true
rstest.workspace = true
stellar-strkey.workspace = true
