lints.workspace = true

[package]
name = "defuse-ton-connect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-crypto = { workspace = true, default-features = false, features = ["ed25519"] }
defuse-digest = { workspace = true, features = ["sha2"] }
defuse-time.workspace = true
tlb-ton.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
arbitrary_with = { workspace = true, optional = true }
cfg_eval = { workspace = true, optional = true }
defuse-serde-utils = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, features = ["base64"], optional = true }

[features]
abi = ["schemars-v0_8"]
arbitrary = [
  "defuse-crypto/arbitrary",
  "defuse-time/arbitrary",
  "dep:arbitrary",
  "dep:arbitrary_with",
  "tlb-ton/arbitrary",
]
cell = ["defuse-serde-utils?/tlb"]
serde = [
  "defuse-crypto/serde",
  "defuse-time/serde",
  "dep:cfg_eval",
  "dep:defuse-serde-utils",
  "dep:serde",
  "dep:serde_with",
  "tlb-ton/serde",
]
schemars-v0_8 = [
  "defuse-crypto/schemars-v0_8",
  "defuse-serde-utils?/schemars-v0_8",
  "defuse-time/schemars-v0_8",
  "dep:schemars",
  "serde",
  "serde_with?/schemars_0_8",
  "tlb-ton/schemars_0_8",
]

[dev-dependencies]
defuse-ton-connect = { path = ".", features = ["arbitrary", "cell", "serde", "schemars-v0_8"] }

hex-literal.workspace = true
rstest.workspace = true
tlb-ton = { workspace = true, features = ["base64"] }
