lints.workspace = true

[package]
name = "defuse-webauthn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["serde"] }
defuse-digest = { workspace = true, features = ["sha2"] }

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["base64"] }

arbitrary = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, features = ["derive"], optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }

[features]
ed25519 = ["defuse-crypto/ed25519"]
p256 = ["defuse-crypto/p256"]

abi = ["borsh-schema", "schemars-v0_8"]
arbitrary = ["defuse-crypto/arbitrary", "dep:arbitrary"]
borsh = ["defuse-crypto/borsh", "dep:borsh"]
borsh-schema = ["borsh", "borsh/unstable__schema", "defuse-crypto/borsh-schema"]
schemars-v0_8 = [
  "defuse-crypto/schemars-v0_8",
  "dep:schemars",
  "serde_with/schemars_0_8",
]

[dev-dependencies]
defuse-webauthn = { path = ".", features = ["arbitrary", "ed25519", "p256", "schemars-v0_8", "borsh", "borsh-schema"] }
hex-literal.workspace = true
rstest.workspace = true
