lints.workspace = true

[package]
name = "defuse-wallet-no-sign"
edition.workspace = true
version = "0.1.0"
rust-version.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
defuse-wallet.workspace = true
thiserror.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, features = ["derive"], optional = true }
near-sdk = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
abi = ["borsh-schema", "defuse-wallet/abi", "near-sdk?/abi", "schemars-v0_8"]
arbitrary = ["defuse-wallet/arbitrary", "dep:arbitrary"]
borsh = ["defuse-wallet/borsh", "dep:borsh"]
borsh-schema = ["borsh", "borsh/unstable__schema", "defuse-wallet/borsh-schema"]
serde = ["defuse-wallet/serde", "dep:serde"]
schemars-v0_8 = ["defuse-wallet/schemars-v0_8", "dep:schemars", "serde"]

contract = ["borsh", "defuse-wallet/near-contract", "dep:near-sdk", "serde"]

[dev-dependencies]
defuse-wallet-no-sign = { path = ".", features = ["abi", "contract"] }

hex-literal.workspace = true
rstest.workspace = true

near-sdk = { workspace = true, features = ["unit-testing"] }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
  "--no-default-features",
  "--features=contract",
  "--abi-features=abi,contract",
]
