lints.workspace = true

[package]
name = "defuse-wallet-webauthn-ed25519"
edition.workspace = true
version = "0.1.0"
rust-version.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
defuse-wallet = { workspace = true, features = ["near-contract"] }
defuse-wallet-webauthn = { workspace = true, features = ["borsh", "ed25519"] }

near-sdk.workspace = true

[features]
abi = ["defuse-wallet-webauthn/abi", "defuse-wallet/abi", "near-sdk/abi"]

[dev-dependencies]
defuse-wallet-webauthn-ed25519 = { path = ".", features = ["abi"] }

near-sdk = { workspace = true, features = ["unit-testing"] }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.96.0"
image_digest = "sha256:ccb22bb4e677ed022d8b9d1aa1b32f0af52dd0471ef1c32e48dedbf68ee6ee17"
passed_env = []
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
  "--no-default-features",
  "--abi-features=abi",
]

[package.metadata.cargo-machete]
# needed for `wallet!` macro, since `#[near(...)]` doesn't support re-exports
ignored = ["near-sdk"]
